# StableDiffusion

./: ADGM_Legal_Process_Checklists.md  AI art  AI art _Stable diffusion using KerasCV.ipynb  README.md  ai-art.ipynb  aiart.py  app.py  requirements.txt
ADGMdata/: ADGMLicensedCSPItems-20250809133146386.csv  Confirmation---Updated-Documents.docx  Confirmation---Valid-Current-Documents.docx  Registration-of-Branch-by-Management-Board.docx  adgm-ra-resolution-corporate-shareholders-PLC-incorporation-v1.docx
KB/: PermittedActivities-20250809120714946.xlsx
legalassistant/: README.md  pyproject.toml
legalassistant/knowledge/: checklist.json
legalassistant/src/legalassistant/: crew.py  main.py
legalassistant/src/legalassistant/config/: agents.yaml  tasks.yaml
legalassistant/src/legalassistant/tools/: __init__.py  docx_annotator_tool.py
